<resources>
    <string name="app_name">Shift</string>
    <string name="settings">Settings</string>
    <string name="moves">Moves</string>
    <string name="time">Time</string>
    <string name="bonus">Bonus</string>
    <string name="level">Level</string>
    <string name="complete">Complete</string>
    <string name="next">Next</string>
    <string name="reset">Reset</string>
    <string name="application_name">SHIFT</string>
    <string name="play">PLAY</string>
    <string name="about">About</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_here">NEW HERE?</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="hint">Hint</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hint_not_available">Hint not available</string>
    <string name="ok">Ok</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="synchronize">Synchronize</string>
    <string name="new_password">New Password</string>
    <string name="pack_finish_message">You conquered the</string>
    <string name="pack_finish_congratulation">Congratulations!</string>
    <string name="pack_finish_reward_gold">Claim 2 free gold!</string>
    <string name="pack_finish_reward_silver">Claim 200 free silver!</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="new_hint">New Hint</string>
    <string name="application_version">Shift Version 1.2</string>
    <string name="company_name">Lucky8s Entertainment</string>
    <string name="company_email">feedback@lucky8sentertainment.com</string>
    <string name="rate_app">Rate App</string>
    <string name="exit">Exit?</string>
    <string name="not_signed_up_question">Not Signed Up?</string>
    <string name="prompt_to_login_beginning">Login as</string>
    <string name="prompt_to_login_end">to continue ascending the leaderboards!</string>
    <string name="transfer_guest_progress">Transfer all progress made as Guest to a new account and get a free gift!</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="temples">Temples</string>
    <string name="stout_temple">Stout Temple</string>
    <string name="earth_temple">Earth Temple</string>
    <string name="flame_temple">Flame Temple</string>
    <string name="aqua_temple">Aqua Temple</string>
    <string name="chilled_temple">Chilled Temple</string>
    <string name="spirit_temple">Spirit Temple</string>
    <string name="light_temple">Light Temple</string>
    <string name="tidal_temple">Tidal Temple</string>
    <string name="mystic_temple">Mystic Temple</string>
    <string name="sunken_temple">Sunken Temple</string>
    <string name="elemental_temple">Elemental Temple</string>
    <string name="stalwart_temple">Stalwart Temple</string>
    <string name="brittle_temple">Brittle Temple</string>
    <string name="sun_temple">Sun Temple</string>
    <string name="volcano_temple">Volcano Temple</string>
    <string name="crumbling_temple">Crumbling Temple</string>
    <string name="cryptic_temple">Cryptic Temple</string>
    <string name="lost_temple">Lost Temple</string>
    <string name="steam_temple">Steam Temple</string>
    <string name="arctic_temple">Arctic Temple</string>
    <string name="pack_counter">0/30</string>
    <string name="forgot_password">FORGET PASSWORD?</string>
    <string name="enter_code">Enter Code</string>
    <string name="forgot_message">A reset code has been sent to the registered email for this user.\nPlease enter the code below.</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="leader_board">Leaderboard</string>
    <string name="world">World</string>
    <string name="national">National</string>
    <string name="personal">Personal</string>
    <string name="position">Position</string>
    <string name="user">User</string>
    <string name="score">Score</string>
    <string name="remove">Remove</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="please_log_in">We\'ve noticed you are not logged into a Shift account. Purchased packs will not carry over to your account while you are logged out. Would you like to log in? </string>
    <string name="continue_purchase">Continue Logged Out</string>
    <string name="banner_ad_unit_id">ca-app-pub-2903288716493195/6305086667</string>
    <string name="tutorial">Tutorial</string>
    <string name="counter">0/10</string>
    <string name="dude_description">You control this block. \nThe goal of Shift is to\nget this block to the finish.</string>
    <string name="finish_description">The finish.\nGet here in the least\namount of time and swipes.</string>
    <string name="finish_end_up">The moveable block must stop\nIN the finish.\nPassing through will not\ncomplete the level.</string>
    <string name="obstacle_description">An obstacle.\nRunning into one of these\nwill stop you in your tracks.</string>
    <string name="hints_description">Use hints to help you through\nthe levels that seem impossible.</string>
    <string name="moves_description">Be aware of the number\nof moves you make.\nA bigger move count\nwill mean a lower score.</string>
    <string name="timer_description">Time is also factored into your score. \n Get to the finish as fast as possible!</string>
    <string name="restart_description">Get caught in a rut?\nRestart from the beginning.</string>
    <string name="welcome_to_shift">Welcome To Shift! \n This tutorial will guide you through the level setup.</string>
    <string name="welcome_to_shift_email">Welcome To Shift!</string>
    <string name="swipe_right">Swipe right anywhere\non the screen to move right.</string>
    <string name="swipe_down">Swipe down anywhere\non the screen to move down.</string>
    <string name="swipe_up">Swipe up anywhere\non the screen to move up.</string>
    <string name="swipe_left">Swipe left anywhere\non the screen to move left.</string>
    <string name="okay">Okay</string>
    <string name="tap_hints">Three hints can be used per level.\nUse the hints to get to the finish.</string>
    <string name="breakables_description">This Breakable is\nin the way of the finish!</string>
    <string name="breakables_action">Run into Breakables\n3 times to destroy them.</string>
    <string name="molten_description">Molten blocks will\nburn your block and restart your game.\nAvoid these at all costs.</string>
    <string name="molten_action">Use hints to help find\nyour way to the finish without\nhitting the Molten block.</string>
    <string name="hints_direction">Hints start at the finish and work back to the start as you use them.</string>
    <string name="portal_description">Portals blocks teleport\nyou to the other Portal blocks.</string>
    <string name="portal_action">Use the Portal block\nto get to the finish.</string>
    <string name="follow_hints">Use hints to guide you.</string>
    <string name="friends_username">Friend\'s Username</string>
    <string name="error">Error</string>
    <string name="shift_user">Shift user </string>
    <string name="someone_new">Someone new is competing against you!</string>
    <string name="added_user">added to personal leaderboard!</string>
    <string name="cannot_find_user">Cannot find Shift account matching that username.</string>
    <string name="username_not_valid">Username is not valid.</string>
    <string name="username_blank">Username field is blank.</string>
    <string name="removing">Removing </string>
    <string name="enable_internet">Please enable internet access.</string>
    <string name="sign_in_personal">Please sign in to add to Personal leaderboard.</string>
    <string name="sign_in_view">Please sign in to view Personal leaderboard.</string>
    <string name="email_invalid">Email address invalid.</string>
    <string name="password_not_correct">Password is not correct for the registered user.</string>
    <string name="username_not_registered">That username is not registered.</string>
    <string name="password_blank">Password field is blank.</string>
    <string name="password_changed">Password changed successfully.</string>
    <string name="hint_cannot_contain">Hint cannot contain part of the new password.</string>
    <string name="new_password_length">New password must be at least 8 characters long.</string>
    <string name="password_confirmation_not_match">Password confirmation and new password do not match.</string>
    <string name="code_incorrect">Code is incorrect.</string>
    <string name="error_occurred">An error has occurred. Please try again.</string>
    <string name="not_registered"> is not registered.</string>
    <string name="level_not_available">This level is not available.</string>
    <string name="confirmation_blank">Password confirmation field is blank.</string>
    <string name="username_length">Username must be at least 6 characters long.</string>
    <string name="too_many_ats">Email contains too many symbols - \'@\'</string>
    <string name="must_contain_symbols">Email is not valid. Must contain \'@\' and \'.\'</string>
    <string name="no_spaces">Cannot contain spaces.</string>
    <string name="email_blank">Email field is blank.</string>
    <string name="user_created"> was created successfully! Please store password in a safe location.</string>
    <string name="username_already_registered">This username is already registered.</string>
    <string name="bubble_description">These are Poppables.\nRunning into this will pop\nit and send you flying back a bit.</string>
    <string name="bubble_action">Use the push back from the Poppable\nto line up with the finish.</string>
    <string name="frozen_description">Running into a Frozen block will\nfreeze you for a short time.</string>
    <string name="frozen_action">Traverse to the finish without hitting\na Frozen block for the best time!</string>
    <string name="pack_not_available">This Temple is not available yet.\nUnlock by finishing open Temples or purchasing.</string>
    <string name="mute_sounds">Mute Sounds</string>
    <string name="mute_music">Mute Music</string>
    <string name="buy">Buy</string>
    <string name="unlock">Unlock Temple</string>
    <string name="unlock_cost">10</string>
    <string name="unlock_remove_ads_cost">15</string>
    <string name="unlock_remove_ads">Unlock Temples\nRemove Ads</string>
    <string name="unlock_all">Unlock All Temples \nRemove All Ads</string>
    <string name="bundles_available_in_store">Temple Bundles Available In Store!</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="free">Free!</string>
    <string name="promo_code_blank">Promo Code field blank.</string>
    <string name="invalid_promo_code">Invalid Promo Code</string>
    <string name="hint_blank">Hint Blank</string>
    <string name="promo_code_used">This code has already been used.</string>
    <string name="new_best">New Best!</string>
    <string name="store">Store</string>
    <string name="pro_bundle">Pro Bundle</string>
    <string name="pro_bundle_description">Unlock all Temples\nUnlimited hints\nRemove all ads</string>
    <string name="pro_bundle_cost">80</string>
    <string name="all_packs_bundle">All Temples Bundle</string>
    <string name="all_packs_bundle_description">Unlock all Temples\nIncludes upcoming Temples</string>
    <string name="unlock_pack">Unlock Temple</string>
    <string name="back">Back</string>
    <string name="go">GO</string>
    <string name="get_code">Get Code</string>
</resources>