<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:weightSum="100">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <Button
            android:id="@+id/send_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:text="@string/get_code"
            android:textSize="@dimen/forgot_textsize"
            android:textStyle="bold"
            android:textColor="@color/etch"
            android:layout_weight="50"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <EditText
            android:id="@+id/code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:textSize="@dimen/forgot_textsize"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textColorHint="@color/lt_tan"
            android:textCursorDrawable="@color/gold"
            android:gravity="center"
            android:hint="@string/enter_code"
            android:layout_weight="70"/>
    </LinearLayout>
    <TextView
        android:id="@+id/code_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/error"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="10sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <EditText
            android:id="@+id/new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:textSize="@dimen/forgot_textsize"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textColorHint="@color/lt_tan"
            android:textCursorDrawable="@color/gold"
            android:gravity="center"
            android:hint="@string/new_password"
            android:layout_weight="70"/>
    </LinearLayout>
    <TextView
        android:id="@+id/password_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/error"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="10sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:textSize="@dimen/forgot_textsize"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textColorHint="@color/lt_tan"
            android:textCursorDrawable="@color/gold"
            android:gravity="center"
            android:hint="@string/confirm_new_password"
            android:layout_weight="70"/>
    </LinearLayout>
    <TextView
        android:id="@+id/confirm_password_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/error"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="10sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <EditText
            android:id="@+id/new_hint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text"
            android:textSize="@dimen/forgot_textsize"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textColorHint="@color/lt_tan"
            android:textCursorDrawable="@color/gold"
            android:gravity="center"
            android:hint="@string/new_hint"
            android:layout_weight="70"/>
    </LinearLayout>
    <TextView
        android:id="@+id/hint_error"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:text="@string/error"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="10sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="100">
        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="@drawable/button"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textSize="@dimen/forgot_textsize"
            android:textColor="@color/etch"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"/>
        <Button
            android:id="@+id/change"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:background="@drawable/button"
            android:text="@string/change"
            android:textStyle="bold"
            android:textSize="@dimen/forgot_textsize"
            android:textColor="@color/etch"/>
    </LinearLayout>

</LinearLayout>