<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/levels_background"
    android:weightSum="100">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="100"
        android:layout_weight="7">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <Button
            android:id="@+id/previous"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:background="@drawable/previous"/>
        <TextView
            android:id="@+id/above"
            android:layout_width="0dp"
            android:gravity="center"
            android:textSize="@dimen/header_textsize"
            android:textColor="@color/lt_tan"
            android:textStyle="bold"
            android:text="@string/about"
            android:layout_height="match_parent"
            android:layout_weight="70"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>
    <TextView
        android:id="@+id/application_version"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/application_version"
        android:textSize="@dimen/settings_textsize"
        android:layout_weight="5"
        android:textColor="@color/etch"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_weight="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:layout_weight="80"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <TextView
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/company_name"
        android:textSize="@dimen/settings_textsize"
        android:textColor="@color/etch"
        android:layout_weight="5"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center"
        android:weightSum="100">
        <TextView
            android:id="@+id/company_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/company_email"
            android:textSize="@dimen/about_textsize_sm"
            android:background="@drawable/unlock_packs_square"
            android:layout_weight="75"
            android:textColor="@color/lt_tan"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_weight="1">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/separator"
            android:layout_weight="80"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center"
        android:weightSum="100">
    <Button
        android:id="@+id/rate_app"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/rate_app"
        android:textSize="@dimen/settings_textsize"
        android:layout_weight="25"
        android:textColor="@color/etch"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:gravity="center"/>
        </LinearLayout>
</LinearLayout>