<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:weightSum="100"
    android:background="@drawable/unlock_packs_background"
    android:layout_height="match_parent">
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_weight="82">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:text="@string/unlock_pack"
            android:textSize="@dimen/unlock_pack_button_textsize"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/lt_tan"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="25">
            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/unlock_pack_margin"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/unlock_pack_textview_textsize"
                android:textColor="@color/lt_tan"
                android:background="@drawable/unlock_packs_square"
                android:text="@string/pack_not_available"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:weightSum="100"
            android:layout_margin="@dimen/unlock_pack_margin"
            android:layout_weight="43">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                android:background="@drawable/unlock_packs_item"
                android:layout_weight="30">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:textSize="@dimen/unlock_pack_textview_textsize"
                    android:text="@string/unlock"
                    android:textColor="@color/lt_tan"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:weightSum="100"
                    android:orientation="vertical"
                    android:layout_weight="4">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="15"/>
                    <Button
                        android:id="@+id/unlock_pack"
                        android:layout_width="match_parent"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:text="@string/unlock_cost"
                        android:textStyle="bold"
                        android:textSize="@dimen/unlock_pack_button_textsize"
                        android:textColor="@color/etch"
                        android:drawableRight="@drawable/gold"
                        android:paddingRight="@dimen/unlock_pack_button_padding"
                        android:background="@drawable/button"
                        android:layout_height="0dp" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                android:background="@drawable/unlock_packs_item"
                android:layout_weight="30">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:textSize="@dimen/unlock_pack_textview_textsize"
                    android:text="@string/unlock_remove_ads"
                    android:textColor="@color/lt_tan"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:weightSum="100"
                    android:orientation="vertical"
                    android:layout_weight="4">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="15"/>
                    <Button
                        android:id="@+id/unlock_pack_no_ads"
                        android:layout_width="match_parent"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:text="@string/unlock_remove_ads_cost"
                        android:textStyle="bold"
                        android:textSize="@dimen/unlock_pack_button_textsize"
                        android:textColor="@color/etch"
                        android:drawableRight="@drawable/gold"
                        android:paddingRight="@dimen/unlock_pack_button_padding"
                        android:background="@drawable/button"
                        android:layout_height="0dp" />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="10"
                android:background="@drawable/unlock_packs_item"
                android:layout_weight="30">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:textSize="@dimen/unlock_pack_textview_textsize"
                    android:text="@string/bundles_available_in_store"
                    android:textColor="@color/lt_tan"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:weightSum="100"
                    android:orientation="vertical"
                    android:layout_weight="4">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="15"/>
                    <Button
                        android:id="@+id/to_store"
                        android:layout_width="match_parent"
                        android:layout_weight="70"
                        android:gravity="center"
                        android:text="@string/go"
                        android:textStyle="bold"
                        android:textSize="@dimen/unlock_pack_button_textsize"
                        android:textColor="@color/etch"
                        android:background="@drawable/button"
                        android:layout_height="0dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="100"
            android:gravity="center"
            android:layout_weight="8">
            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:textSize="@dimen/unlock_pack_button_textsize"
                android:textStyle="bold"
                android:textColor="@color/etch"
                android:background="@drawable/button"
                android:layout_weight="40" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"/>
</LinearLayout>